Fix bug in the sub-navigation, where the text is shown with hyphens and breaks onto the next line.

--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -298,6 +298,7 @@ html.nav-open {
 		letter-spacing: @font__navigation--letter-spacing;
 		color: @color__navigation--text;
 		.transition (all 0.5s ease);
+		hyphens: none;
 		
 		@media @tablet {
 			margin: 0 65px;
